<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/statistics"
            android:title="@string/statistic_report" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/information"
            android:title="@string/about_us" />
    </group>
</menu>