<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp" />


    <EditText
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:background="@drawable/edittext_box"
        android:padding="12dp"
        android:inputType="text"
        android:autofillHints="none"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp" />


    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />


    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:background="@drawable/edittext_box"
        android:padding="12dp"
        android:autofillHints="none"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp" />


    <TextView
        android:id="@+id/dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/descriptionText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/dueDateText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_box"
        android:clickable="true"
        android:cursorVisible="true"
        android:drawableEnd="@drawable/calender"
        android:focusable="true"
        android:hint="@string/dd_mm_yyyy"
        android:importantForAutofill="no"
        android:inputType="date"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dueDate" />

    <TextView
        android:id="@+id/dueTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/due_time"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/dueDateText"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText"/>
    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/timeText"
        android:background="@drawable/edittext_box"
        android:clickable="true"
        android:cursorVisible="true"
        android:focusable="true"
        android:hint="@string/hh_mm_ss"
        android:importantForAutofill="no"
        android:inputType="time"
        android:padding="12dp"
        android:drawableEnd="@drawable/ic_watch"
        app:layout_constraintStart_toStartOf="@+id/dueTime"
        app:layout_constraintTop_toBottomOf="@+id/dueTime"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/dueDateText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/priorityGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        android:padding="0dp"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@id/priority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEssential"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/essential"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checkable="true"
            app:chipMinHeight="25dp"
            android:textColor="@color/white"
            app:chipBackgroundColor="#AB0707"
            android:layout_marginEnd="40dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipImportant"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            app:chipBackgroundColor="#F05222"
            android:textColor="@color/white"
            app:chipMinHeight="25dp"

            android:layout_marginEnd="40dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFlexible"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/flexible"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checkable="true"
            app:chipMinHeight="25dp"
            app:chipBackgroundColor="#96E745"
            android:textColor="@color/white"
             />
    </com.google.android.material.chip.ChipGroup>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/category"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/priorityGroup"
    android:layout_marginStart="16dp"
    android:textSize="20sp"
    android:textStyle="bold"
    android:text="@string/category"/>
    <EditText
        android:id="@+id/categorytext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_work_category"
        android:background="@drawable/edittext_box"
        android:padding="12dp"
        android:inputType="text"
        android:autofillHints="none"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/categorytext"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />


    <EditText
        android:id="@+id/datetext"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_box"
        android:clickable="true"
        android:cursorVisible="true"
        android:drawableEnd="@drawable/calender"
        android:focusable="true"
        android:hint="@string/dd_mm_yyyy"
        android:importantForAutofill="no"
        android:inputType="date"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Date" />
    <TextView
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/time"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/datetext"
        app:layout_constraintTop_toBottomOf="@+id/categorytext"/>
    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/TimeText"
        android:background="@drawable/edittext_box"
        android:clickable="true"
        android:cursorVisible="true"
        android:focusable="true"
        android:hint="@string/hh_mm_ss"
        android:importantForAutofill="no"
        android:inputType="time"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="@+id/Time"
        app:layout_constraintTop_toBottomOf="@+id/Time"
        android:layout_marginTop="12dp"/>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/Addbutton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/datetext"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="16dp"
    android:text="@string/save"
    android:textSize="20sp"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:backgroundTint="#001F4D"/>

</androidx.constraintlayout.widget.ConstraintLayout>