<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="380dp"
        android:layout_marginBottom="125dp"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fadingEdge="none"
        android:fadingEdgeLength="0dp">

        <LinearLayout
            android:id="@+id/logoContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:background="@android:color/transparent">


            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/logo1"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:contentDescription="@string/first"
                    android:src="@drawable/second"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_deadlines"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stay_on_top_of_your_tasks_by_setting_due_date"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/logo2"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:contentDescription="@string/second"
                    android:src="@drawable/third"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_reminder"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_notified_before_your_tasks_are_due"
                    android:textSize="16sp"
                    android:textColor="#CCFFFFFF"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/logo3"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:contentDescription="@string/third"
                    android:src="@drawable/fourth"
                    android:scaleType="centerInside" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_progress"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visualize_your_productivity_and_build_streaks"
                    android:textSize="16sp"
                    android:textColor="#CCFFFFFF"
                    />
            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>
    <LinearLayout
        android:id="@+id/dotContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:text="@string/get_started"
        app:layout_constraintTop_toTopOf="@id/dotContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#001F4D"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="23sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>