<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTaskActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="Edit Task"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <RelativeLayout
        android:id="@+id/backRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#001F4D"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/editToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_back"
            android:tint="@android:color/white"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/taskdetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Task"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/backRow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title"
                android:background="@drawable/edittext_box"
                android:padding="12dp"
                android:inputType="text"
                android:autofillHints="none"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_description"
                android:background="@drawable/edittext_box"
                android:padding="12dp"
                android:autofillHints="none"
                android:inputType="textMultiLine"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dueDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/due_date"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/dueDateText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edittext_box"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:drawableEnd="@drawable/calender"
                        android:hint="@string/dd_mm_yyyy"
                        android:importantForAutofill="no"
                        android:inputType="date"
                        android:padding="12dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/dueTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/due_time"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/timeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edittext_box"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/hh_mm_ss"
                        android:importantForAutofill="no"
                        android:inputType="time"
                        android:padding="12dp"
                        android:drawableEnd="@drawable/ic_watch" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/priorityGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipEssential"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/essential"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="20dp"
                    app:chipBackgroundColor="#AB0707"
                    android:textColor="@color/white" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipImportant"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/important"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:chipBackgroundColor="#F05222"
                    android:textColor="@color/white" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFlexible"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/flexible"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="31dp"
                    app:chipBackgroundColor="#96E745"
                    android:textColor="@color/white" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/category"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/category"/>

            <EditText
                android:id="@+id/categorytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_work_category"
                android:background="@drawable/edittext_box"
                android:padding="12dp"
                android:inputType="text"
                android:autofillHints="none"
                android:layout_marginTop="8dp" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/UpdateTaskButton"
                android:layout_marginTop="32dp"
                android:text="Update Task"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:backgroundTint="?attr/colorPrimary"
                android:padding="16dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>