<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statisticreport.StatisticReportFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistics"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#212121"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="8dp" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChartStatus"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <TextView
                android:id="@+id/statusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_status"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="24dp" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChartPriority"
                android:layout_width="match_parent"
                android:layout_height="300dp"
               />
            <TextView
                android:id="@+id/priorityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_priority"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="24dp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>